# UPES-CSDV3001

./: README.md
fantastic_auth/: .pypirc  pyproject.toml  setup.py
fantastic_auth/src/: __init__.py  auth.py
java_sonar_example/my-app2/: pom.xml
java_sonar_example/my-app2/src/main/java/com/mycompany/app/: App.java  DatabaseConnection.java
multichoice-questions/: artifacts_nexus.html  jenkins_pipelines.html  jenkins_pr_testing.html  jenkins_setup.html
roberta/: Dockerfile  build.Jenkinsfile  build.jenkinsfile  requirements.txt
roberta/tests/: test_cache.py
slides/: cicd.html
sql_injection/: app.py
sql_injection/templates/: index.html  login.html  register.html
tutorials/: artifacts_nexus.md  jenkins_agents.md  jenkins_pipelines.md  jenkins_pr_testing.md  jenkins_setup.md  onboarding.md  sonarqube.md
